[gd_scene load_steps=4 format=3 uid="uid://cyssynqbw33oq"]

[ext_resource type="Script" path="res://scenes/PomodoroTimer.gd" id="1_dpc6i"]
[ext_resource type="FontFile" uid="uid://0jqx62gj4pwq" path="res://ldfcomicsans-font/Ldfcomicsans-jj7l.ttf" id="2_rj8dj"]

[sub_resource type="Theme" id="Theme_r1dsa"]
default_font = ExtResource("2_rj8dj")
default_font_size = 15

[node name="PomodoroTimer" type="Node"]
script = ExtResource("1_dpc6i")
session_time = 11

[node name="TimerLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.5
offset_top = -30.0
offset_right = 73.5
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_r1dsa")
theme_override_font_sizes/font_size = 50
text = "25:00"
horizontal_alignment = 1

[node name="PomoTimer" type="Timer" parent="."]
wait_time = 1500.0

[node name="TimerButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.5
offset_top = 30.27
offset_right = 41.5
offset_bottom = 73.27
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "START"

[connection signal="timeout" from="PomoTimer" to="." method="_on_pomo_timer_timeout"]
[connection signal="pressed" from="TimerButton" to="." method="_on_timer_button_pressed"]
